kubernetes/tandoor/db/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tandoor-db
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tandoor
      app.kubernetes.io/component: database
  ingress:
  - fromEndpoints:
    - {}
  - fromEndpoints:
    - matchLabels:
        prometheus: k8s
        io.kubernetes.pod.namespace: monitoring
    toPorts:
    - ports:
      - port: "9187"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cnpg-system
    toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
  egress:
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEntities:
    - kube-apiserver
  - toEndpoints:
    - {}
